--- a/login/Assistant/Assistant/Views/Home/Create_list.cshtml
+++ b/login/Assistant/Assistant/Views/Home/Create_list.cshtml
@@ -3,15 +3,15 @@
     ViewData["Title"] = "Stworz Liste";
 }
 <div class="row" style="margin-left:0%">
-    <h4>Tworzenie Listy</h4>
-    <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Main_menu", "Home")'" value="Wroć" style="margin-bottom:3px; width:60px; margin-left:37%;" />
+    <h4> List Create@*Tworzenie Listy*@</h4>
+    <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Main_menu", "Home")'" value="Back" style="margin-bottom:3px; width:60px; margin-left:37%;" />
 </div>
 
-<div class="lead">Podaj Nazwe Produktu</div>
+<div class="lead">Name of product</div>
 
 <div class="row">
     <div class="col-md-4">
-        @*<form action="AddProduct">*@
+        
         <form action="AddProduct" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -19,31 +19,24 @@
                 <input asp-for="product.Name" class="form-control" id="Name" />
                 <span asp-validation-for="product.Name" class="text-danger"></span>
             </div>
-
-
-
+           
             <div class="form-group">
 
-                <button type="submit" class="btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;">Dodaj produkt</button>
-                @*<input type="submit" class="btn btn-outline-primary" style="margin-left:16px" />*@
-
+                <button type="submit" class="btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;">Add Product</button>
 
             </div>
 
         </form>
 
         <form action="FinishList" method="post">
-            <button class="btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;">Dodaj Liste</button>
+            <button class="btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;">Add List</button>
 
         </form>
-
     </div>
 </div>
 
 
 
-@*</div>
-    </div>*@
 
 @if (Model.productsToPartial.Count() > 0)
 {
@@ -51,7 +44,7 @@
 }
 else
 {
-    <h1> Lista jest pusta</h1>
+    <h1> List is empty</h1>
 }
 
 
