--- a/login/Assistant/Assistant/Views/Home/Load_list.cshtml
+++ b/login/Assistant/Assistant/Views/Home/Load_list.cshtml
@@ -3,10 +3,10 @@
 }
 
 <div class="row">
-    <h4>Wybierz Liste do Wczytania</h4>
+    <h4>Lists to load</h4>
 
 
-    <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Main_menu", "Home")'" value="Wroć" style="margin-bottom:3px; width:60px; margin-left:10%;" />
+    <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Main_menu", "Home")'" value="Back" style="margin-bottom:3px; width:60px; margin-left:10%;" />
 </div>
 
 <div class="accordion" id="accordionExample">
@@ -14,24 +14,27 @@
     @foreach (var list in ViewBag.Lists)
     {
         <div class="card-header" id="headingOne_@k">
-            <h5 class="mb-0">
+            <h5 class="mb-0"></h5>
                 <div class="row">
                     <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne_@k" aria-expanded="true" aria-controls="collapseOne">
-                        Lista @k
-
-                        <form action="Edit_List" method="post" name="Edit_list" value>
-                            <button class="btn-primary" style="margin-bottom:3px; width:100px; margin-left:5%;">Edytuj</button>
-                        </form>
+                        List @k
+                  
+                       
+                    <form action="Edit_List" method="post">
+                        <input type="hidden" name="list.Id" value="@list.Id" />
+                        
+                        <button class="btn-primary" style="margin-bottom:3px; width:100px; margin-left:5%;">Edit</button>
+                    </form>
                         <form action="DeleteList" method="post">
                             <input type="hidden" name="list.Id" value="@list.Id" />
 
 
-                            <button type="submit"><img src="~/cross.png" width="15px" height="15px" /></button>
+                            <button type="submit"><img src="~/cross.png" width="15" height="15" /></button>
                         </form>
 
                     </button>
                 </div>
-            </h5>
+            
         </div>
 
         <div class="card">
