--- a/login/Assistant/Assistant/Views/Home/Main_menu.cshtml
+++ b/login/Assistant/Assistant/Views/Home/Main_menu.cshtml
@@ -8,6 +8,12 @@
 
     <h2> Asystent Zakupow </h2>
 
+
+    @*<div class="float-sm-right">
+
+                button
+
+        </div>*@
 </nav>
 <div class="col-sm-3 text-center">
     <div class="row mt-3"></div>
