--- a/login/Assistant/Assistant/Views/Home/Create_list.cshtml
+++ b/login/Assistant/Assistant/Views/Home/Create_list.cshtml
@@ -14,7 +14,7 @@
 <div class="row">
     <div class="col-md-4">
         
-        <form action="AddProduct" method="post">
+        <form asp-controller="Home" asp-action="AddProduct" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
 
