--- a/login/Assistant/Assistant/Views/Generate/Select_list.cshtml
+++ b/login/Assistant/Assistant/Views/Generate/Select_list.cshtml
@@ -3,11 +3,11 @@
 }
 
 
-<nav class="navbar">
+<div class="row" style="margin-left:0%">
+    <h4> Generowanie listy</h4>
+    <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Main_menu", "Home")'" value="Wroc" style="margin-bottom:3px; width:60px; margin-left:37%;" />
+</div>
 
-    <h2> Asystent Zakupow </h2>
-
-</nav>
 <div class="col-sm-3 text-center">
     <div class="row mt-3"></div>
     <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Ranking", "Generate")'" value="Ranking" style="margin-bottom:3px; width:200px" />
