--- a/login/Assistant/Assistant/Views/Home/Create_list.cshtml
+++ b/login/Assistant/Assistant/Views/Home/Create_list.cshtml
@@ -3,11 +3,11 @@
     ViewData["Title"] = "Stworz Liste";
 }
 <div class="row" style="margin-left:0%">
-    <h4> List Create@*Tworzenie Listy*@</h4>
-    <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Main_menu", "Home")'" value="Back" style="margin-bottom:3px; width:60px; margin-left:37%;" />
+    <h4> Tworzenie Listy</h4>
+    <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Main_menu", "Home")'" value="Wroc" style="margin-bottom:3px; width:60px; margin-left:37%;" />
 </div>
 
-<div class="lead">Name of product</div>
+<div class="lead">Nazwa produktu</div>
 
 
 
