--- a/login/Assistant/Assistant/Views/Home/Main_menu.cshtml
+++ b/login/Assistant/Assistant/Views/Home/Main_menu.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
 @{
     ViewData["Title"] = "Main_menu";
 }
@@ -8,12 +10,6 @@
 
     <h2> Asystent Zakupow </h2>
 
-
-    @*<div class="float-sm-right">
-
-                button
-
-        </div>*@
 </nav>
 <div class="col-sm-3 text-center">
     <div class="row mt-3"></div>
@@ -21,11 +17,9 @@
     <div class="row mt-3"></div>
     <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Create_list", "Home")'" value="Stworz nowa listę" style=" margin-bottom:3px;width:200px" />
     <div class="row mt-3"></div>
-    <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Generate_list", "Home")'" value="Wygeneruj listę zakupów" style=" margin-bottom:3px; width:200px" />
-    <div class="row mt-3"></div>
-    <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Register", "Account")'" value="Zarejestruj" style=" margin-bottom:3px; width:200px" />
+    <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Select_list", "Generate")'" value="Wygeneruj listę zakupów" style=" margin-bottom:3px; width:200px" />
 </div>
 
 
-@await  Html.PartialAsync("FrequentList")
+@await Html.PartialAsync("FrequentList")
 
