--- a/login/Assistant/Assistant/Views/Home/Main_menu.cshtml
+++ b/login/Assistant/Assistant/Views/Home/Main_menu.cshtml
@@ -15,7 +15,7 @@
     <div class="row mt-3"></div>
     <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Load_list", "Home")'" value="Edytuj liste zakupów" style="margin-bottom:3px; width:200px" />
     <div class="row mt-3"></div>
-    <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Create_list", "Home")'" value="Stworz nowa listę" style=" margin-bottom:3px;width:200px" />
+    <input type="button" class="btn-primary" onclick="location.href='@Url.Action("List_name", "Home")'" value="Stworz nowa listę" style=" margin-bottom:3px;width:200px" />
     <div class="row mt-3"></div>
     <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Select_list", "Generate")'" value="Wygeneruj listę zakupów" style=" margin-bottom:3px; width:200px" />
 </div>
