--- a/login/Assistant/Assistant/Views/Home/List_name.cshtml
+++ b/login/Assistant/Assistant/Views/Home/List_name.cshtml
@@ -15,6 +15,12 @@
 
                 <input asp-for="Name" class="form-control" id="Name" />
                 <span asp-validation-for="Name" class="text-danger"></span>
+
+                <div class="row">
+                    Lista prywatna
+                    <input id="IsPrivate" type="checkbox" asp-for="UserId"  name="IsPrivate"/>
+                   
+                </div>
             </div>
 
             <div class="form-group">
@@ -23,5 +29,6 @@
 
             </div>
         </form>
+
     </div>
 </div>
