Change list type
Able to change list type from private to public and from public to private

--- a/login/Assistant/Assistant/Views/Home/List_name.cshtml
+++ b/login/Assistant/Assistant/Views/Home/List_name.cshtml
@@ -16,12 +16,16 @@
                 <input asp-for="Name" class="form-control" id="Name" />
                 <span asp-validation-for="Name" class="text-danger"></span>
 
-                <div class="row">
-                    Lista prywatna
-                    <input id="IsPrivate" type="checkbox" asp-for="UserId"  name="IsPrivate"/>
-                   
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <div class="row">
+                        Lista prywatna
+                        <input id="IsPrivate" type="checkbox" asp-for="UserId" name="IsPrivate" />
+
+                    </div>
+                 }
                 </div>
-            </div>
+               
 
             <div class="form-group">
 
