--- a/login/Assistant/Assistant/Views/Home/Create_list.cshtml
+++ b/login/Assistant/Assistant/Views/Home/Create_list.cshtml
@@ -13,7 +13,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        
+
         <form asp-controller="Home" asp-action="AddProduct" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -21,23 +21,36 @@
                 <input asp-for="product.Name" class="form-control" id="Name" />
                 <span asp-validation-for="product.Name" class="text-danger"></span>
             </div>
-           
+            <div class="row mt-3"></div>
             <div class="form-group">
-
-                <button type="submit" class="btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;">Add Product</button>
-
+                <button type="submit" class="btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;">Dodaj produkt</button>
             </div>
-
         </form>
-     
-        
+
+        <div class="row mt-3"></div>
         <form action="FinishList" method="post">
-            <button class="btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;">Add List</button>
-
+            <button class="btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;">Dodaj liste</button>
         </form>
+        @if (User.Identity.IsAuthenticated && Model.productList.List.UserId == null)
+        {
+            <div class="row mt-3"></div>
+            <form asp-controller="Home" asp-action="ChangeType" method="post">
+                <input id="ListId" asp-for="@Model.productList.List.Id" name="ListId" hidden />
+                <input id="UserId" asp-for="@Model.productList.List.UserId" name="UserId" hidden />
+                <button type="submit" class="btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;"> Zmien na prywatna</button>
+            </form>
+        }
+        @if (User.Identity.IsAuthenticated && Model.productList.List.UserId != null)
+        {
+            <div class="row mt-3"></div>
+            <form asp-controller="Home" asp-action="ChangeType" method="post">
+                <input id="ListId" asp-for="@Model.productList.List.Id" name="ListId" hidden />
+                <input id="UserId" asp-for="@Model.productList.List.UserId" name="UserId" hidden />
+                <button type="submit" class="btn-primary" style="margin-bottom:3px; width:200px; margin-left:20%;"> Zmien na publiczna</button>
+            </form>
+        }
     </div>
 </div>
-
 
 
 
