--- a/login/Assistant/Assistant/Views/Home/Main_menu.cshtml
+++ b/login/Assistant/Assistant/Views/Home/Main_menu.cshtml
@@ -12,12 +12,19 @@
 
 </nav>
 <div class="col-sm-3 text-center">
-    <div class="row mt-3"></div>
-    <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Load_list", "Home")'" value="Edytuj liste zakupów" style="margin-bottom:3px; width:200px" />
+
     <div class="row mt-3"></div>
     <input type="button" class="btn-primary" onclick="location.href='@Url.Action("List_name", "Home")'" value="Stworz nowa listę" style=" margin-bottom:3px;width:200px" />
     <div class="row mt-3"></div>
     <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Select_list", "Generate")'" value="Wygeneruj listę zakupów" style=" margin-bottom:3px; width:200px" />
+
+    <div class="row mt-3"></div>
+    <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Public_list_load", "Home")'" value="Edytuj liste zakupów" style="margin-bottom:3px; width:200px" />
+    <div class="row mt-3"></div>
+    @if (User.Identity.IsAuthenticated)
+    {
+        <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Private_list_load", "Home")'" value="Listy prywatne" style=" margin-bottom:3px; width:200px" />
+    }
 </div>
 
 
