--- a/login/Assistant/Assistant/Views/Home/Public_list_load.cshtml
+++ b/login/Assistant/Assistant/Views/Home/Public_list_load.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="row">
-    <h4>Listy gotowe do wczytania</h4>
+    <h4>Lists to load</h4>
 
 
     <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Main_menu", "Home")'" value="Back" style="margin-bottom:3px; width:60px; margin-left:10%;" />
@@ -15,26 +15,27 @@
     {
         <div class="card-header" id="headingOne_@k">
             <h5 class="mb-0"></h5>
-                <div class="row">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne_@k" aria-expanded="true" aria-controls="collapseOne">
-                        @list.Name
-                  
-                       
+            <div class="row">
+                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne_@k" aria-expanded="true" aria-controls="collapseOne">
+                    @list.Name
+
+
                     <form action="Edit_List" method="post">
                         <input type="hidden" name="list.Id" value="@list.Id" />
-                        
-                        <button class="btn-primary" style="margin-bottom:3px; width:100px; margin-left:5%;">Edit</button>
+
+                        <button class="btn-primary" style="margin-bottom:3px; width:100px; margin-left:25%;">Edit</button>
                     </form>
-                        <form action="DeleteList" method="post">
-                            <input type="hidden" name="list.Id" value="@list.Id" />
+                    <form action="DeleteList" method="post">
+                        <input type="hidden" name="list.Id" value="@list.Id" />
 
 
-                            <button type="submit"><img src="~/cross.png" width="15" height="15" /></button>
-                        </form>
+                        <button type="submit"><img src="~/cross.png" width="15" height="15" /></button>
+                    </form>
+                
 
-                    </button>
-                </div>
-            
+                </button>
+            </div>
+
         </div>
 
         <div class="card">
