--- a/login/Assistant/Assistant/Areas/Identity/Pages/Account/Login.cshtml
+++ b/login/Assistant/Assistant/Areas/Identity/Pages/Account/Login.cshtml
@@ -36,17 +36,18 @@
                 </div>
                 <div class="form-group">
                     <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                        <a id="forgot-password" asp-page="./ForgotPassword">Zapomniales haslo?</a>
                     </p>
                     <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Zarejestruj</a>
                     </p>
                 </div>
             </form>
         </section>
     </div>
     <div class="col-md-6 col-md-offset-2">
-        <section>
+        @* fb google login *@
+        @*<section>
             <h4>Use another service to log in.</h4>
             <hr />
             @{
@@ -73,7 +74,7 @@
                     </form>
                 }
             }
-        </section>
+        </section>*@
     </div>
 </div>
 
