--- a/login/Assistant/Assistant/Views/Home/Main_menu.cshtml
+++ b/login/Assistant/Assistant/Views/Home/Main_menu.cshtml
@@ -24,7 +24,11 @@
     @if (User.Identity.IsAuthenticated)
     {
         <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Private_list_load", "Home")'" value="Listy prywatne" style=" margin-bottom:3px; width:200px" />
+        <div class="row mt-3"></div>
+        <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Share_list", "Home")'" value="Udostepnij liste" style=" margin-bottom:3px; width:200px" />
     }
+
+
 </div>
 
 
