--- a/login/Assistant/Assistant/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/login/Assistant/Assistant/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
 @model ResetPasswordModel
 @{
-    ViewData["Title"] = "Reset password";
+    ViewData["Title"] = "Resetowanie Hasla";
 }
 
 <h1>@ViewData["Title"]</h1>
-<h4>Reset your password.</h4>
+<h4>Zresetuj haslo</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -13,21 +13,21 @@
             <div asp-validation-summary="All" class="text-danger"></div>
             <input asp-for="Input.Code" type="hidden" />
             <div class="form-group">
-                <label asp-for="Input.Email"></label>
+                <label>Email</label>
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.Password"></label>
+                <label>Haslo</label>
                 <input asp-for="Input.Password" class="form-control" />
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.ConfirmPassword"></label>
+                <label>Potwierdz haslo</label>
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Reset</button>
+            <button type="submit" class="btn btn-primary">Zresetuj</button>
         </form>
     </div>
 </div>
