--- a/login/Assistant/Assistant/Views/Home/List_name.cshtml
+++ b/login/Assistant/Assistant/Views/Home/List_name.cshtml
@@ -2,10 +2,11 @@
 @{
     ViewData["Title"] = "List_name";
 }
+    <div class="row">
+        <h4>Podaj Nazwe Listy</h4>
 
-<h1>Podaj Nazwe Listy</h1>
-
-
+        <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Main_menu", "Home")'" value="Wroc" style="margin-bottom:3px; width:60px; margin-left:37%;" />
+    </div>
 <div class="row">
     <div class="col-md-4">
         <form asp-controller="Home" asp-action="Send_Name" method="post">
