--- a/login/Assistant/Assistant/Views/Home/Main_menu.cshtml
+++ b/login/Assistant/Assistant/Views/Home/Main_menu.cshtml
@@ -19,14 +19,20 @@
     <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Select_list", "Generate")'" value="Wygeneruj listę zakupów" style=" margin-bottom:3px; width:200px" />
 
     <div class="row mt-3"></div>
-    <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Public_list_load", "Home")'" value="Edytuj liste zakupów" style="margin-bottom:3px; width:200px" />
-    <div class="row mt-3"></div>
     @if (User.Identity.IsAuthenticated)
     {
+        <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Public_list_load", "Home")'" value="Edytuj listy publiczne" style="margin-bottom:3px; width:200px" />
+        <div class="row mt-3"></div>
         <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Private_list_load", "Home")'" value="Listy prywatne" style=" margin-bottom:3px; width:200px" />
         <div class="row mt-3"></div>
         <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Share_list", "Home")'" value="Udostepnij liste" style=" margin-bottom:3px; width:200px" />
+
     }
+    else
+    {
+        <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Public_list_load", "Home")'" value="Edytuj liste zakupów" style="margin-bottom:3px; width:200px" />
+    }
+
 
 
 </div>
