--- a/login/Assistant/Assistant/Views/Home/Productlist.cshtml
+++ b/login/Assistant/Assistant/Views/Home/Productlist.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "ProductList";
 }
-<h2>Product list</h2>
+<h2>Lista produktow</h2>
 
 <table class="table">
     <thead>
@@ -17,10 +17,17 @@
         {
             <tr>
                 <td>
-                    <form action="DeleteProduct" method="post">
+                    @*<form action="DeleteProduct" method="post">
 
                         <input type="hidden" name="product.Id" value="@item.Id" />
+                        @item.Name
 
+                        <button type="submit"><img src="~/cross.png" width="15" height="15" /></button>
+                    </form>*@
+
+                    <form asp-controller="Home" asp-action="DeleteProduct" method="post">
+                        <input type="hidden" name="IdToRemove" value="@item.Id" />
+                        @item.Name
 
                         <button type="submit"><img src="~/cross.png" width="15" height="15" /></button>
                     </form>
