--- a/login/Assistant/Assistant/Views/ListDisplay/Load_list.cshtml
+++ b/login/Assistant/Assistant/Views/ListDisplay/Load_list.cshtml
@@ -18,20 +18,28 @@
                 <div class="row">
                     <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne_@k" aria-expanded="true" aria-controls="collapseOne">
                         @list.Name
-                  
-                       
-                    <form action="Edit_List" method="post">
-                        <input type="hidden" name="list.Id" value="@list.Id" />
-                        
-                        <button class="btn-primary" style="margin-bottom:3px; width:100px; margin-left:5%;">Edytuj</button>
-                    </form>
-                        <form action="DeleteList" method="post">
+
+
+                        @*<form action="Edit_List" method="post">
+            <input type="hidden" name="list.Id" value="@list.Id" />
+
+            <button class="btn-primary" style="margin-bottom:3px; width:100px; margin-left:5%;">Edytuj</button>
+        </form>
+            <form action="DeleteList" method="post">
+                <input type="hidden" name="list.Id" value="@list.Id" />
+
+
+                <button type="submit"><img src="~/cross.png" width="15" height="15" /></button>
+            </form>*@
+                        <form asp-controller="Home" asp-action="Edit_List" method="post">
                             <input type="hidden" name="list.Id" value="@list.Id" />
-
-
-                            <button type="submit"><img src="~/cross.png" width="15" height="15" /></button>
+                            <button class="btn-primary" style="margin-bottom:3px; width:100px; margin-left:5%;">Edytuj</button>
                         </form>
 
+                        <form asp-controller="Home" asp-action="DeleteList" method="post">
+                            <input type="hidden" name="list.Id" value="@list.Id" />
+                            <button type="submit"><img src="~/cross.png" width="15" height="15" /></button>
+                        </form>
                     </button>
                 </div>
             
