--- a/login/Assistant/Assistant/Views/ListDisplay/Public_list_load.cshtml
+++ b/login/Assistant/Assistant/Views/ListDisplay/Public_list_load.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="row">
-    <h4>Lists to load</h4>
+    <h4>Listy do wczytania</h4>
 
 
     <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Main_menu", "Home")'" value="Wroc" style="margin-bottom:3px; width:60px; margin-left:10%;" />
@@ -22,17 +22,26 @@
                             @list.Name
 
 
-                            <form action="Edit_List" method="post">
-                                <input type="hidden" name="list.Id" value="@list.Id" />
+                            @*<form action="Edit_List" method="post">
+            <input type="hidden" name="list.Id" value="@list.Id" />
 
-                                <button class="btn-primary" style="margin-bottom:3px; width:100px; margin-left:25%;">Edytuj</button>
+            <button class="btn-primary" style="margin-bottom:3px; width:100px; margin-left:25%;">Edytuj</button>
+        </form>
+
+
+        <form action="DeleteList" method="post">
+            <input type="hidden" name="list.Id" value="@list.Id" />
+
+
+            <button type="submit"><img src="~/cross.png" width="15" height="15" /></button>
+        </form>*@
+                            <form asp-controller="Home" asp-action="Edit_List" method="post">
+                                <input type="hidden" name="list.Id" value="@list.Id" />
+                                <button class="btn-primary" style="margin-bottom:3px; width:100px; margin-left:5%;">Edytuj</button>
                             </form>
 
-
-                            <form action="DeleteList" method="post">
+                            <form asp-controller="Home" asp-action="DeleteList" method="post">
                                 <input type="hidden" name="list.Id" value="@list.Id" />
-
-
                                 <button type="submit"><img src="~/cross.png" width="15" height="15" /></button>
                             </form>
 
