--- a/login/Assistant/Assistant/Views/Utility/Share_list.cshtml
+++ b/login/Assistant/Assistant/Views/Utility/Share_list.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Wybierz liste do udostepnienia";
 }
 <div class="row">
-    <h4>Lists to load</h4>
+    <h4>Listy do udostepnienia</h4>
 
 
     <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Main_menu", "Home")'" value="Wroc" style="margin-bottom:3px; width:60px; margin-left:10%;" />
