neural network pre-alpha
neural network create,  have to reshape tables

--- a/login/Assistant/Assistant/Views/Generate/Select_mode.cshtml
+++ b/login/Assistant/Assistant/Views/Generate/Select_mode.cshtml
@@ -14,6 +14,6 @@
     <div class="row mt-3"></div>
     <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Interpolation", "Generate")'" value="Interpolacja" style=" margin-bottom:3px;width:200px" />
     <div class="row mt-3"></div>
-    <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Neural_Network", "Generate")'" value="Siec" style=" margin-bottom:3px; width:200px" />
+    <input type="button" class="btn-primary" onclick="location.href='@Url.Action("NeuralNetwork", "Generate")'" value="Siec" style=" margin-bottom:3px; width:200px" />
 </div>
 
