--- a/login/Assistant/Assistant/Views/ListDisplay/Public_list_load.cshtml
+++ b/login/Assistant/Assistant/Views/ListDisplay/Public_list_load.cshtml
@@ -8,48 +8,40 @@
 
     <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Main_menu", "Home")'" value="Wroc" style="margin-bottom:3px; width:60px; margin-left:10%;" />
 </div>
-<div class="col-sm-10">
-    <div class="accordion" id="accordionExample">
+<div class="col-sm-10" >
+    <div class="accordion" id="accordionExample" >
         @{int k = 0;}
-    
-            @foreach (var list in ViewBag.Lists)
-            {
-                <div class="card-header" id="headingOne_@k">
-                    <h5 class="mb-0"></h5>
-                    <div class="row">
 
-                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne_@k" aria-expanded="true" aria-controls="collapseOne">
-                            @list.Name
+        @foreach (var list in ViewBag.Lists)
+        {
+            <div class="card-header" id="headingOne_@k" >
 
+                <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne_@k" aria-expanded="true" aria-controls="collapseOne">
+                       
+                                @list.Name
 
-                            @*<form action="Edit_List" method="post">
-            <input type="hidden" name="list.Id" value="@list.Id" />
+                </button>
+            </div>
+            <div class="row">
+                <form asp-controller="Home" asp-action="Edit_List" method="post">
+                    <input type="hidden" name="list.Id" value="@list.Id" />
+                    <button class="btn-primary" style="margin-bottom:3px; width:100px;height:30px; margin-left:15px">Edytuj</button>
+                </form>
 
-            <button class="btn-primary" style="margin-bottom:3px; width:100px; margin-left:25%;">Edytuj</button>
-        </form>
+                <form asp-controller="Home" asp-action="DeleteList" method="post">
+                    <input type="hidden" name="list.Id" value="@list.Id" />
+                    <button class="btn-primary" style="margin-bottom:3px; width:100px; height:30px; margin-left:20px">Usuń</button>
+                </form>
 
-
-        <form action="DeleteList" method="post">
-            <input type="hidden" name="list.Id" value="@list.Id" />
-
-
-            <button type="submit"><img src="~/cross.png" width="15" height="15" /></button>
-        </form>*@
-                            <form asp-controller="Home" asp-action="Edit_List" method="post">
-                                <input type="hidden" name="list.Id" value="@list.Id" />
-                                <button class="btn-primary" style="margin-bottom:3px; width:100px; margin-left:5%;">Edytuj</button>
-                            </form>
-
-                            <form asp-controller="Home" asp-action="DeleteList" method="post">
-                                <input type="hidden" name="list.Id" value="@list.Id" />
-                                <button type="submit"><img src="~/cross.png" width="15" height="15" /></button>
-                            </form>
+                <form asp-controller="Home" asp-action="ListToShop" method="post">
+                    <input type="hidden" name="list.Id" value="@list.Id" />
+                    <button class="btn-primary" style="margin-bottom:3px; width:100px;height:30px; margin-left:20px">Wybierz</button>
+                </form>
+            </div>
 
 
-                        </button>
-                    </div>
 
-                </div>
+
 
                 <div class="card">
                     @foreach (var productList in list.ProductList)
@@ -64,7 +56,7 @@
                     }
                 </div>
                 k++;
-            }
+                }
         </div>
     </div>
 
