--- a/login/Assistant/Assistant/Views/Shared/_Layout.cshtml
+++ b/login/Assistant/Assistant/Views/Shared/_Layout.cshtml
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Assistant</title>
-
-    <link rel="manifest" href="/manifest.json">
+   
+    <link rel='manifest' href='~/manifest.json'>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -68,9 +68,24 @@
 </body>
 </html>
 <script>
-    if ('serviceWorker' in navigator) {
-        navigator.serviceWorker
-            .register('/serviceworker.js')
-            .then(function () { console.log('Service Worker Registered'); });
-    }
+    // This is the "Offline page" service worker
+
+// Add this below content to your HTML page, or add the js file to your page at the very top to register service worker
+
+// Check compatibility for the browser we're running this in
+if ("serviceWorker" in navigator) {
+  if (navigator.serviceWorker.controller) {
+    console.log("[PWA Builder] active service worker found, no need to register");
+  } else {
+    // Register the service worker
+    navigator.serviceWorker
+      .register("pwabuilder-sw.js", {
+        scope: "./"
+      })
+      .then(function (reg) {
+        console.log("[PWA Builder] Service worker has been registered for scope: " + reg.scope);
+      });
+  }
+}
+
 </script>
