--- a/login/Assistant/Assistant/Views/Progressive/Select_list_to_save_offline.cshtml
+++ b/login/Assistant/Assistant/Views/Progressive/Select_list_to_save_offline.cshtml
@@ -50,5 +50,27 @@
     }
 </div>
 
+<script>
+    function fetchJsonFile(path, callback) {
+        var httpRequest = new XMLHttpRequest();
+        httpRequest.onreadystatechange = function () {
+            if (httpRequest.readyState === 4) {
+                if (httpRequest.status === 200) {
+                    var data = JSON.parse(httpRequest.responseText);
+                    if (callback) callback(data);
+                }
+            }
+        };
+        httpRequest.open('GET', path);
+        httpRequest.send();
+    }
+
+
+    fetchJsonFile('/OfflineList.json', function (data) {
+        console.log(data);
+    });
+
+</script>
+
 
 
