--- a/login/Assistant/Assistant/Views/Shared/_Layout.cshtml
+++ b/login/Assistant/Assistant/Views/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
         </script>
     </environment>
     <script src="~/js/site.js" asp-append-version="true"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
