--- a/login/Assistant/Assistant/Views/Generate/Neural_Network_Settings.cshtml
+++ b/login/Assistant/Assistant/Views/Generate/Neural_Network_Settings.cshtml
@@ -35,6 +35,10 @@
             <input type="checkbox" class="radio" value="6" name="alghoritm" /> Levenberg
         </label>
         <div class="row mt-3"></div>
+        <label>
+            <input type="checkbox" class="radio" value="7" name="alghoritm" /> Turniejowa
+        </label>
+        <div class="row mt-3"></div>
     </div>
 
 
