whole NN working

--- a/login/Assistant/Assistant/Views/Generate/Neural_Network_Settings.cshtml
+++ b/login/Assistant/Assistant/Views/Generate/Neural_Network_Settings.cshtml
@@ -12,7 +12,7 @@
     <h4> Wybierz algorytm trenowania</h4>
     <div>
         <label>
-            <input type="checkbox" class="radio" value="1" name="alghoritm" /> Propagacja wsteczna
+            <input type="checkbox" class="radio" value="1" name="alghoritm" checked /> Propagacja wsteczna
         </label>
         <div class="row mt-3"></div>
         <label>
