--- a/login/Assistant/Assistant/Views/Generate/Select_mode.cshtml
+++ b/login/Assistant/Assistant/Views/Generate/Select_mode.cshtml
@@ -4,15 +4,16 @@
 
 
 <div class="row" style="margin-left:0%">
+    
     <h4> Generowanie listy</h4>
-    <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Main_menu", "Home")'" value="Wroc" style="margin-bottom:3px; width:60px; margin-left:37%;" />
+    <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Main_menu", "Home")'" value="Wroc" style="margin-bottom:3px; width:60px; margin-left:24%;" />
 </div>
 
 <div class="col-sm-3 text-center">
     <div class="row mt-3"></div>
     <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Ranking", "Generate")'" value="Ranking" style="margin-bottom:3px; width:200px" />
     <div class="row mt-3"></div>
-    <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Interpolation", "Generate")'" value="Interpolacja" style=" margin-bottom:3px;width:200px" />
+    <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Interpolation", "Generate")'" value="Ekstrapolacja" style=" margin-bottom:3px;width:200px" />
     <div class="row mt-3"></div>
     <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Neural_Network_Settings", "Generate")'" value="Siec" style=" margin-bottom:3px; width:200px" />
 </div>
