--- a/login/Assistant/Assistant/Views/Offline/DisplayOfflineList.cshtml
+++ b/login/Assistant/Assistant/Views/Offline/DisplayOfflineList.cshtml
@@ -2,11 +2,11 @@
     <title>Zapisana lista</title>
 </head>
 <body>
-    <h4>Last Saved List</h4>
+    <h4>Ostatnio zapisana lista:</h4>
 
 
     <div id="app">
-        <h2>List vue:</h2>
+        
         <ol>
             <li v-for="item in items">
                 
