--- a/login/Assistant/Assistant/Views/Generate/Neural_Network_Settings.cshtml
+++ b/login/Assistant/Assistant/Views/Generate/Neural_Network_Settings.cshtml
@@ -6,7 +6,7 @@
 <h1>Ustawienie Sieci Neuronowej</h1>
 
 <form asp-controller="Generate" asp-action="NeuralNetwork" method="post">
-    Podaj ilość dni, z której sieć ma pobrać listy:
+    Podaj liczbę dni, z której sieć ma pobrać listy:
     <br /><input type="text" pattern="[0-9]+" name="Days" style="margin-bottom:3px; width:200px; margin-left:20%;" value="60" />
     <div class="row mt-3"></div>
     <h4> Wybierz algorytm trenowania</h4>
