--- a/login/Assistant/Assistant/Views/Home/Get_share_email.cshtml
+++ b/login/Assistant/Assistant/Views/Home/Get_share_email.cshtml
@@ -3,7 +3,7 @@
  
 }
 
-<h4>Podaj Email uzytkownika, <br /> ktoremu chcesz udostepnic liste</h4>
+<h4>Podaj Email użytkownika, <br /> któremu chcesz udostepnić listę</h4>
 
 
 <div class="row">
@@ -17,7 +17,8 @@
         <form asp-controller="Home" asp-action="Send_email" method="post">
             <input type="text" name="mail"><br>
             <input type="text" name="ListId" hidden />
-            <input type="submit" value="Udostepnij">
+            <br />
+            <input type="submit" class="btn-primary" value="Udostepnij">
         </form>
             @ViewData["ErrorMessage"]
     </div>
