--- a/login/Assistant/Assistant/Views/Home/Productlist.cshtml
+++ b/login/Assistant/Assistant/Views/Home/Productlist.cshtml
@@ -4,7 +4,7 @@
 }
 
     <div class="col-12">
-        <h2>Lista produktow</h2>
+        <h2>Lista produktów</h2>
     </div>
 @foreach (var item in Model)
 {
@@ -32,6 +32,7 @@
                 </div>
               
             </div>
+            <br />
         </div>
     </form>
 
