--- a/login/Assistant/Assistant/Views/Home/ShoppingView.cshtml
+++ b/login/Assistant/Assistant/Views/Home/ShoppingView.cshtml
@@ -2,11 +2,11 @@
     <title>Zapisana lista</title>
 </head>
 <body>
-    <h4>Last Saved List</h4>
+  
 
 
     <div id="app">
-        <h2>List vue:</h2>
+        <h2>Zapisane produkty:</h2>
         <ol>
             <li v-for="item in items">
                 <label>
