--- a/login/Assistant/Assistant/Views/Utility/Main_menu.cshtml
+++ b/login/Assistant/Assistant/Views/Utility/Main_menu.cshtml
@@ -10,7 +10,7 @@
 </head>
 <nav class="navbar">
 
-    <h2> Asystent Zakupow </h2>
+    <h2> Menu Główne </h2>
 
 </nav>
 <div class="col-sm-3 text-center">
@@ -24,7 +24,7 @@
 
         <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Select_mode", "Generate")'" value="Wygeneruj listę zakupów" style=" margin-bottom:3px; width:215px" />
         <div class="row mt-3"></div>
-        <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Public_list_load", "Home")'" value="Edytuj listy publiczne" style="margin-bottom:3px; width:215px" />
+        <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Public_list_load", "Home")'" value="Listy publiczne" style="margin-bottom:3px; width:215px" />
         <div class="row mt-3"></div>
         <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Private_list_load", "Home")'" value="Listy prywatne" style=" margin-bottom:3px; width:215px" />
         <div class="row mt-3"></div>
@@ -37,7 +37,7 @@
     }
     else
     {
-        <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Public_list_load", "Home")'" value="Edytuj liste zakupów" style="margin-bottom:3px; width:215px" />
+        <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Public_list_load", "Home")'" value="Listy publiczne" style="margin-bottom:3px; width:215px" />
     }
 
 
