--- a/login/Assistant/Assistant/Areas/Identity/Pages/Account/Login.cshtml
+++ b/login/Assistant/Assistant/Areas/Identity/Pages/Account/Login.cshtml
@@ -2,58 +2,51 @@
 @model LoginModel
 
 @{
-    ViewData["Title"] = "Logowanie";
+    ViewData["Title"] = "Log in";
 }
 
-    <div class="row">
-        <h2>@ViewData["Title"]</h2>
-        <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Main_menu", "Home")'" value="Wroc" style="margin-bottom:3px; width:60px; margin-left:37%; height:35px" />
-    </div>
+<h1>@ViewData["Title"]</h1>
 <div class="row">
     <div class="col-md-4">
         <section>
             <form id="account" method="post">
-                <h4>Zaloguj</h4>
+                <h4>Use a local account to log in.</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
-                    <label>Email</label>
+                    <label asp-for="Input.Email"></label>
                     <input asp-for="Input.Email" class="form-control" />
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label>Haslo</label>
+                    <label asp-for="Input.Password"></label>
                     <input asp-for="Input.Password" class="form-control" />
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
-                
                 <div class="form-group">
                     <div class="checkbox">
-                        <label>
-                            Zapamietaj mnie
+                        <label asp-for="Input.RememberMe">
                             <input asp-for="Input.RememberMe" />
-                            <br />
-                            
+                            @Html.DisplayNameFor(m => m.Input.RememberMe)
                         </label>
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary">Zaloguj</button>
+                    <button type="submit" class="btn btn-primary">Log in</button>
                 </div>
                 <div class="form-group">
                     <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Zapomniales haslo?</a>
+                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
                     </p>
                     <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Zarejestruj</a>
+                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
                     </p>
                 </div>
             </form>
         </section>
     </div>
     <div class="col-md-6 col-md-offset-2">
-        @* fb google login *@
-        @*<section>
+        <section>
             <h4>Use another service to log in.</h4>
             <hr />
             @{
@@ -80,7 +73,7 @@
                     </form>
                 }
             }
-        </section>*@
+        </section>
     </div>
 </div>
 
