--- a/login/Assistant/Assistant/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/login/Assistant/Assistant/Areas/Identity/Pages/Account/Logout.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model LogoutModel
 @{
-    ViewData["Title"] = "Wylogowany";
+    ViewData["Title"] = "Log out";
 }
 
 <header>
     <h1>@ViewData["Title"]</h1>
-    <p>Zostales wylogowany</p>
+    <p>You have successfully logged out of the application.</p>
 </header>
