MongoDB some fixes

--- a/login/Assistant/Assistant/Views/Utility/List_name.cshtml
+++ b/login/Assistant/Assistant/Views/Utility/List_name.cshtml
@@ -26,7 +26,7 @@
                                 Lista prywatna
                             </div>
                             <div class="col-2">
-                                <input id="IsPrivate" type="checkbox" asp-for="UserId" name="IsPrivate" />
+                                <input id="IsPrivate" type="checkbox"  name="IsPrivate" checked />
 
                             </div>
                         </div>
